examples/test/testpolicy1512.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1512
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key19: value38
      key21: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value36
          key28: value29
          key40: value9
      podSelector:
        matchLabels:
          key23: value32
          key16: value31
          key42: value36
